[workspace]
resolver = "2"
# all crates should be listed here
members = [
    "apps/client",
    "apps/launcher",
    "apps/ui_editor",
    "apps/config",
    "apps/content",
    "apps/automation/cli",
    "apps/automation/lib",
    "apps/automation/crates/vultr",
    "apps/orchestrator",
    "apps/orchestrator/http_proto",
    "apps/region",
    "apps/region/http_proto",
    "apps/session",
    "apps/session/http_proto",
    "apps/session/naia_proto",
    "apps/world",
    "apps/world/http_proto",
    "apps/world/naia_proto",
    "apps/asset",
    "apps/asset/http_proto",
    "apps/editor/client",
    "apps/editor/server/proto",
    "apps/editor/server",
    "crates/engine",
    "crates/render/render_api",
    "crates/render/render_gl",
    "crates/render/render_egui",
    "crates/math",
    "crates/input",
    "crates/asset/io",
    "crates/asset/render",
    "crates/asset/id",
    "crates/filesystem",
    "crates/render/gl",
    "crates/render/egui_gl",
    "crates/http/bevy_http_client",
    "crates/http/bevy_http_server",
    "crates/http/bevy_http_shared",
    "crates/http/http_server",
    "crates/http/http_server_shared",
    "crates/http/http_client",
    "crates/http/http_common",
    "crates/http/http_client_shared",
    "crates/crypto",
    "crates/executor",
    "crates/storage",
    "crates/ui",
    "crates/ui/layout",
]
# any crates with conflicting dependencies / feature flags cannot be put here
default-members = [

]

[profile.release]
opt-level = 's'
lto = true

[profile.dev]
opt-level = 1
debug-assertions = false

[profile.dev.package."*"]
opt-level = 1