[workspace]
resolver = "2"
# all crates should be listed here
members = [
    # Apps

    # Configs
    "apps/config",

    # Launcher Client
    "apps/launcher",
    # Game Client
    "apps/client",


    # Content Server
    "apps/content",
    # Gateway Server
    "apps/gateway",
    "apps/gateway/http_proto",
    # Auth Server
    "apps/auth",
    "apps/auth/http_proto",
    "apps/auth/db",
    # Region Server
    "apps/region",
    "apps/region/http_proto",
    # Session Server
    "apps/session",
    "apps/session/http_proto",
    "apps/session/naia_proto",
    # World Server
    "apps/world",
    "apps/world/http_proto",
    "apps/world/naia_proto",
    # Asset Server
    "apps/asset",
    "apps/asset/http_proto",

    # Tools
    # Automation CLI / Library
    "apps/automation/cli",
    "apps/automation/lib",
    "apps/automation/crates/vultr",
    # Asset Editor
    "apps/editor/client",
    "apps/editor/server/proto",
    "apps/editor/server",
    # Ui Editor
    "apps/ui_editor",

    # Engine
    "crates/engine",
    # Math
    "crates/math",
    # Input
    "crates/input",
    # Filesystem
    "crates/filesystem",
    # DB
    "crates/db",
    # Cryptography
    "crates/crypto",
    # Random
    "crates/random",
    # Time
    "crates/instant",
    # Physics
    "crates/physics",
    "apps/physics_tester",
    # Clipboard
    "crates/clipboard",
    # Multithreading / Executor
    "crates/executor",
    # In-Memory Storage Types .. possibly useless
    "crates/storage",
    # Rendering
    "crates/render/render_api",
    "crates/render/render_gl",
    "crates/render/render_egui",
    "crates/render/gl",
    "crates/render/egui_gl",
    # Assets
    "crates/asset/serde",
    "crates/asset/loader",
    "crates/asset/render",
    "crates/asset/id",
    # Http
    "crates/http/bevy_http_client",
    "crates/http/bevy_http_server",
    "crates/http/bevy_http_shared",
    "crates/http/http_server",
    "crates/http/http_server_shared",
    "crates/http/http_client",
    "crates/http/http_common",
    "crates/http/http_client_shared",
    # UI
    "crates/ui/builder",
    "crates/ui/layout",
    "crates/ui/runner/render",
    "crates/ui/builder/config",
    "crates/ui/runner",
    "crates/ui/runner/state",
    "crates/ui/runner/input",
    "crates/ui/runner/config",
    "crates/ui/serde",
]
# any crates with conflicting dependencies / feature flags cannot be put here
default-members = []

[profile.release]
opt-level = 's'
lto = true

[profile.dev]
opt-level = 1
debug-assertions = false

[profile.dev.package."*"]
opt-level = 1