[workspace]
resolver = "2"
# all crates should be listed here
members = [

    ### Config ###
    "config",

    ### Deployments ###
    # Standalone [Native]
    "deployments/native",
    # Launcher [Web]
    "deployments/web/launcher",
    # Game [Web]
    "deployments/web/game",
    # Level Editor [Web]
    "deployments/web/level_editor",

    ### Apps ###
    # Launcher
    "apps/launcher",
    # Game
    "apps/game",

    ### Services ###
    # Redirector Server
    "services/redirector",
    # Gateway Server
    "services/gateway",
    # Content Server
    "services/content",
    # NeoContent Server
    "services/neocontent",
    # Auth Server
    "services/auth",
    "services/auth/http_proto",
    "services/auth/db",
    # Region Server
    "services/region",
    "services/region/http_proto",
    # Session Server
    "services/session",
    "services/session/http_proto",
    "services/session/naia_proto",
    # World Server
    "services/world",
    "services/world/http_proto",
    "services/world/naia_proto",
    # Asset Server
    "services/asset",
    "services/asset/http_proto",

    ### Tools ###
    # Automation CLI / Library
    "apps/automation/cli",
    "apps/automation/lib",
    "apps/automation/crates/vultr",
    # Asset Editor
    "apps/editor/client",
    "apps/editor/server/proto",
    "apps/editor/server",
    # Ui Editor
    "apps/ui_editor",
    # Physics Tester
    "apps/physics_tester",

    ### Crates ###
    # Engine
    "crates/engine",
    # Math
    "crates/math",
    # Input
    "crates/input",
    # Filesystem
    "crates/filesystem",
    # DB
    "crates/db",
    # Git
    "crates/git",
    # Logging
    "crates/logging",
    # Cryptography
    "crates/crypto",
    # Random
    "crates/random",
    # Time
    "crates/instant",
    # Physics
    "crates/physics",
    # Kernel
    "crates/kernel",
    # Clipboard
    "crates/clipboard",
    # Email
    "crates/email",
    # Multithreading / Executor
    "crates/executor",
    # In-Memory Storage Types .. possibly useless
    "crates/storage",
    # Rendering
    "crates/render/render_api",
    "crates/render/render_gl",
    "crates/render/render_egui",
    "crates/render/gl",
    "crates/render/egui_gl",
    # Assets
    "crates/asset/serde",
    "crates/asset/loader",
    "crates/asset/render",
    "crates/asset/id",
    # Http
    "crates/http/bevy_http_client",
    "crates/http/bevy_http_server",
    "crates/http/bevy_http_shared",
    "crates/http/http_server",
    "crates/http/http_server_shared",
    "crates/http/http_client",
    "crates/http/http_common",
    "crates/http/http_client_shared",
    "crates/http/acme",
    "crates/http/acme/cert_db",
    # UI
    "crates/ui/builder",
    "crates/ui/layout",
    "crates/ui/runner/render",
    "crates/ui/builder/config",
    "crates/ui/runner",
    "crates/ui/runner/state",
    "crates/ui/runner/input",
    "crates/ui/runner/config",
    "crates/ui/serde",
]
# any crates with conflicting dependencies / feature flags cannot be put here
default-members = []

[profile.release]
opt-level = 's'
lto = true

[profile.dev]
opt-level = 1
debug-assertions = false

[profile.dev.package."*"]
opt-level = 1