[package]
name = "config"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
local = []
prod = []
client = []
orchestrator = []
region = []
session = []
world = []

[dependencies]
cfg-if = { version = "1.0" }
log = { version = "0.4" }