[package]
name = "game_engine"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
local = [ "config/local" ]
prod = [ "config/prod" ]
gl_renderer = [ "render_gl" ]
wgpu_renderer = [ ]

[dependencies]
# Internal Crates
math = { path = "../../crates/math" }
render_api = { path = "../../crates/render/render_api" }
input = { path = "../../crates/input" }
asset_render = { path = "../../crates/asset/render" }
bevy_http_client = { path = "../../crates/http/bevy_http_client" }
config = { path = "../config", features = ["client"]}
storage = { path = "../../crates/storage" }
asset_id = { path = "../../crates/asset/id" }
filesystem = { path = "../../crates/filesystem" }
ui = { path = "../../crates/ui" }

orchestrator_http_proto = { path = "../orchestrator/http_proto" }
session_server_naia_proto = { path = "../session/naia_proto" }
world_server_naia_proto = { path = "../world/naia_proto" }

# `render_gl` and `render_wgpu` SHOULD *ALWAYS* be optional
render_gl = { path = "../../crates/render/render_gl", optional = true }

naia-serde = { path = "../../../naia/shared/serde" }

# External Crates
naia-bevy-client = { path = "../../../naia/adapters/bevy/client", features = ["transport_webrtc"] }

bevy_app = { version = "0.13", default-features=false }
bevy_ecs = { version = "0.13", default-features=false }
bevy_log = { version = "0.13", default-features=false }

cfg-if = { version = "1.0" }
rand = { version = "0.8.5" }