[package]
name = "game_app"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
local = [ "game_engine/local" ]
prod = [ "game_engine/prod" ]
gl_renderer = [ "game_engine/gl_renderer" ]
wgpu_renderer = [ "game_engine/wgpu_renderer" ]

[dependencies]
# Internal
# goal is to have ONLY game_engine here!!!
game_engine = { path = "../../crates/engine", features = ["networked"] }
naia-serde = { path = "../../../naia/shared/serde" }
random = { path = "../../crates/random" }

# External
bevy_app = { version = "0.13", default-features=false }
bevy_ecs = { version = "0.13", default-features=false }
bevy_log = { version = "0.13", default-features=false }

cfg-if = { version = "1.0" }