[package]
name = "game_app"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
local = [ "game_engine/local", "game_app_inworld/local", "game_app_common/local", "game_app_main_menu?/local" ]
prod = [ "game_engine/prod", "game_app_inworld/prod", "game_app_common/prod", "game_app_main_menu?/prod" ]
gl_renderer = [ "game_engine/gl_renderer", "game_app_inworld/gl_renderer", "game_app_common/gl_renderer", "game_app_main_menu?/gl_renderer" ]
wgpu_renderer = [ "game_engine/wgpu_renderer", "game_app_inworld/wgpu_renderer", "game_app_common/wgpu_renderer", "game_app_main_menu?/wgpu_renderer" ]
odst = [ "game_engine/odst", "game_app_inworld/odst", "game_app_common/odst" ]
no_odst = [ "game_app_main_menu/no_odst" ]

[dependencies]
# Internal

# goal is to have ONLY game_engine here!!!
game_engine = { path = "../../crates/engine", features = ["networked"] }

# and these subapps... ?
game_app_inworld = { path = "inworld" }
game_app_common =  { path = "common" }
game_app_main_menu = { path = "main_menu", optional = true }

# External
bevy_app = { version = "0.15", default-features=false }
bevy_ecs = { version = "0.15", default-features=false }

cfg-if = { version = "1.0" }