[package]
name = "physics_tester"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[[bin]]
name = "ui_editor"
path = "src/main.rs"

[dependencies]
# Internal
# goal is to have ONLY game_engine here!!!
game_engine = { path = "../../crates/engine", features = [ "gl_renderer", "local" ] }
logging = { path = "../../crates/logging" }

# External
bevy_app = { version = "0.13", default-features=false }
bevy_ecs = { version = "0.13", default-features=false }

cfg-if = { version = "1.0" }