[package]
name = "region_server"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
local = [ "config/local" ]
prod = [ "config/prod" ]

[dependencies]
http_server = { path = "../../crates/http/http_server" }
http_client = { path = "../../crates/http/http_client" }
crypto = { path = "../../crates/crypto" }
config = { path = "../config", features = ["region"] }
random = { path = "../../crates/random" }

region_server_http_proto = { path = "http_proto" }
session_server_http_proto = { path = "../session/http_proto" }
world_server_http_proto = { path = "../world/http_proto" }
asset_server_http_proto = { path = "../asset/http_proto" }

log = { version = "0.4", features = [] }
simple_logger = { version = "4.0", default-features = false, features = ["timestamps"] }