[package]
name = "spec_editor"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[[bin]]
name = "spec_editor"
path = "src/main.rs"

[dependencies]
# Internal
asset_serde = { path = "../../crates/asset/serde", features = [ "write_bits", "read_bits", "write_json", "read_json" ] }
asset_id = { path = "../../crates/asset/id" }
ui_builder = { path = "../../crates/ui/builder" }
render_api = { path = "../../crates/render/render_api" }
logging = { path = "../../crates/logging" }

# External
cfg-if = { version = "1.0" }

serde_json = { version = "1.0.107" }