[package]
name = "temp_2d"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal Crates
math = { path = "../../crates/math" }
render_api = { path = "../../crates/render_api" }
render_glow = { path = "../../crates/render_glow" }
input = { path = "../../crates/input" }

# External Crates
bevy_app = { version = "0.10", default-features = false }
bevy_ecs = { version = "0.10", default-features = false }
bevy_log = { version = "0.10", default-features = false }
cfg-if = { version = "1.0" }

# Wasm Only
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }