[package]
name = "ui_editor"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[[bin]]
name = "ui_editor"
path = "src/main.rs"

[dependencies]
# Internal
# goal is to have ONLY game_engine here!!!
game_engine = { path = "../../crates/engine", features = [ "gl_renderer", "local" ] }
asset_io = { path = "../../crates/asset/io", features = [ "write_bits", "read_bits", "write_json", "read_json" ] }

# External
bevy_app = { version = "0.13", default-features=false }
bevy_ecs = { version = "0.13", default-features=false }
bevy_log = { version = "0.13", default-features=false }

rand = { version = "0.8.5" }
cfg-if = { version = "1.0" }

serde_json = { version = "1.0.107" }