[package]
name = "ui_editor"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[[bin]]
name = "ui_editor"
path = "src/main.rs"

[dependencies]
# Internal
# goal is to have ONLY game_engine here!!!
game_engine = { path = "../../crates/engine", features = [ "gl_renderer", "local" ] }
asset_serde = { path = "../../crates/asset/serde", features = [ "write_bits", "read_bits", "write_json", "read_json" ] }
random = { path = "../../crates/random" }
ui_builder = { path = "../../crates/ui/builder" }
ui_runner_config = { path = "../../crates/ui/runner/config" }

# External
bevy_app = { version = "0.13", default-features=false }
bevy_ecs = { version = "0.13", default-features=false }
bevy_log = { version = "0.13", default-features=false }

cfg-if = { version = "1.0" }

serde_json = { version = "1.0.107" }