[package]
name = "world_server"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
local = [ "config/local" ]
prod = [ "config/prod" ]

[dependencies]
naia-bevy-server = { path = "../../../naia/adapters/bevy/server", features = [ "transport_webrtc" ] }
bevy_http_server = { path = "../../crates/http/bevy_http_server" }
bevy_http_client = { path = "../../crates/http/bevy_http_client" }
config = { path = "../config", features = ["world"] }
crypto = { path = "../../crates/crypto" }
asset_id = { path = "../../crates/asset/id" }
random = { path = "../../crates/random" }

world_server_naia_proto = { path = "naia_proto" }
world_server_http_proto = { path = "http_proto" }
region_server_http_proto = { path = "../region/http_proto" }
session_server_http_proto = { path = "../session/http_proto" }

# These are the official Bevy crates, we can use them because the Server isn't built for Wasm
bevy_app = { version = "0.13", default-features=false }
bevy_ecs = { version = "0.13", default-features=false }
bevy_log = { version = "0.13", default-features=false }

# TODO: remove this once bevy_log is updates the underlying tracing-log requirement from 0.1.2 to 0.2.0
regex = { version = "1.10.3", features = ["unicode-case"] }