[package]
name = "asset"
version = "0.1.0"
edition = "2021"

[dependencies]
# should never include "render_gl" or "render_wgpu" here!

filetypes = { path = "../filetypes", features = ["read"] }
render_api = { path = "../render_api" }
math = { path = "../math" }
web_fs = { path = "../../../web_fs" }

bevy_app = { version = "0.12.1", default-features = false }
bevy_ecs = { version = "0.12.1", default-features = false }
bevy_log = { version = "0.12.1", default-features=false }

naia-serde = { path = "../../../naia/shared/serde" }