[package]
name = "asset"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
# should never include "render_gl" or "render_wgpu" here!
asset_io = { path = "io", features = ["read_bits"] }
render_api = { path = "../render/render_api" }
math = { path = "../math" }
web_fs = { path = "../../../web_fs" }
storage = { path = "../storage" }

bevy_app = { version = "0.12.1", default-features = false }
bevy_ecs = { version = "0.12.1", default-features = false }
bevy_log = { version = "0.12.1", default-features=false }