[package]
name = "clipboard"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
logging = { path = "../../crates/logging" }

bevy_app = { version = "0.13", default-features = false }
bevy_ecs = { version = "0.13", default-features = false }

cfg-if = { version = "1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { version = "3.2.0" }
thread_local = { version = "1.1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Clipboard",
    "ClipboardEvent",
    "DataTransfer",
    "Document",
    "Window",
    "Navigator",
] }
js-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
crossbeam-channel = { version = "0.5" }