[package]
name = "egui_glow"
version = "0.23.0"
edition = "2021"

[features]


[dependencies]
glow = { path = "../glow" }

egui = { version = "0.22", default-features = false, features = [
  "bytemuck",
] }

bytemuck = "1.7"

log = { version = "0.4", features = ["std"] }
memoffset = "0.6"

# Web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = { version = "0.2" }
