[package]
name = "game_engine"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
networked = [ "auth_server_http_proto", "region_server_http_proto", "session_server_naia_proto", "world_server_naia_proto" ]
local = [ "config/local", "session_server_naia_proto/local", "world_server_naia_proto/local" ]
prod = [ "config/prod", "session_server_naia_proto/prod", "world_server_naia_proto/prod" ]
gl_renderer = [ "render_gl" ]
wgpu_renderer = [ ]

[dependencies]
# Internal Crates
math = { path = "../math" }
render_api = { path = "../render/render_api" }
input = { path = "../input" }
asset_loader = { path = "../asset/loader" }
asset_render = { path = "../asset/render" }
config = { path = "../../config", features = ["client"]}
storage = { path = "../storage" }
asset_id = { path = "../asset/id" }
filesystem = { path = "../filesystem" }
ui_state = { path = "../ui/runner/state" }
ui_render = { path = "../ui/runner/render" }
ui_runner = { path = "../ui/runner" }
ui_input = { path = "../ui/runner/input" }
random = { path = "../random" }
kernel = { path = "../kernel" }
logging = { path = "../logging" }

# Networked Dependencies
auth_server_http_proto = { path = "../../services/auth/http_proto", optional = true }
region_server_http_proto = { path = "../../services/region/http_proto", optional = true }
session_server_naia_proto = { path = "../../services/session/naia_proto", optional = true }
world_server_naia_proto = { path = "../../services/world/naia_proto", optional = true }

# `render_gl` and `render_wgpu` SHOULD *ALWAYS* be optional
render_gl = { path = "../render/render_gl", optional = true }

naia-serde = { path = "../../../naia/shared/serde" }

# External Crates
naia-bevy-client = { path = "../../../naia/adapters/bevy/client", features = ["transport_webrtc"] }

bevy_app = { version = "0.13", default-features=false }
bevy_ecs = { version = "0.13", default-features=false }

cfg-if = { version = "1.0" }