[package]
name = "game_engine"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]
local = [ "config/local" ]
prod = [ "config/prod" ]
gl_renderer = [ "render_gl" ]
wgpu_renderer = [ ]
odst = [ "config/odst" ]

[dependencies]
# Internal Crates
math = { path = "../math" }
render_api = { path = "../render/render_api" }
input = { path = "../input" }
asset_loader = { path = "../asset/loader" }
asset_render = { path = "../asset/render" }
asset_id = { path = "../asset/id" }
asset_cache = { path = "../asset/cache" }
config = { path = "../../config", features = ["client"]}
storage = { path = "../storage" }
filesystem = { path = "../filesystem" }
ui_render = { path = "../ui/runner/render" }
ui_runner = { path = "../ui/runner" }
ui_extensions = { path = "../ui/extensions" }
random = { path = "../random" }
kernel = { path = "../kernel" }
logging = { path = "../logging" }
social_server_types = { path = "../../services/social/types" }
instant = { path = "../instant" }

# `render_gl` and `render_wgpu` SHOULD *ALWAYS* be optional
render_gl = { path = "../render/render_gl", optional = true }

# External Crates
bevy_app = { version = "0.15", default-features=false }
bevy_ecs = { version = "0.15", default-features=false }
bevy_state = { version = "0.15", default-features=false }

cfg-if = { version = "1.0" }