[package]
name = "executor"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
once_cell = { version = "1.4.1" }
futures-lite = { version = "2.0.1" }
async-executor = { version = "1.11" }
async-channel = { version = "2.2.0" }
async-lock = { version = "2.6.0" }
async-net = { version = "1.4.3" }
async-io = { version = "1.12.0" }
concurrent-queue = { version = "2.0.0" }