[package]
name = "executor"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
cfg-if = { version = "1.0" }

once_cell = { version = "1.4.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = { version = "1.12" }
async-channel = { version = "1.8" }
async-io = { version = "1.13" }
async-lock = { version = "2.8" }
async-net = { version = "1.7" }
futures-lite = { version = "1.12" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

