[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
logging = { path = "../logging" }
executor = { path = "../executor" }

bevy_ecs = { version = "0.14", default-features = false }
bevy_app = { version = "0.14", default-features = false }
bevy_core = { version = "0.14", default-features = false }

cfg-if = { version = "1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
crossbeam-channel = { version = "0.5" }
js-sys = { version = "0.3" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = [
    "Window", "Navigator", "StorageManager", "FileSystemDirectoryHandle", "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions", "FileSystemGetFileOptions", "FileSystemWritableFileStream", "Blob"
]}
