[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_tasks = { version = "0.12.1", default-features = false, features = ["multi-threaded"] }
bevy_ecs = { version = "0.12.1", default-features = false }
bevy_app = { version = "0.12.1", default-features = false }
bevy_core = { version = "0.12.1", default-features = false }

ehttp = { version = "0.3.0", features = ["native-async"] }
futures-lite = "1.11.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
crossbeam-channel = "0.5.7"