[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_tasks = { version = "0.12.1", default-features = false, features = ["multi-threaded"] }
bevy_ecs = { version = "0.12.1", default-features = false }
bevy_app = { version = "0.12.1", default-features = false }
bevy_core = { version = "0.12.1", default-features = false }

cfg-if = { version = "1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
crossbeam-channel = "0.5.7"
ehttp = { version = "0.3.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-lite = { version = "1.11.3" }
ehttp = { version = "0.3.0", features = ["native-async"] }