[package]
name = "http_server"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
workspace = "../.."
edition = "2021"
publish = false

[features]

[dependencies]
once_cell = { version = "1.4.1" }
smol = { version = "1.3" }
log = { version = "0.4" }
async-dup = { version = "1.2.2" }
http = { version = "0.2" }