[package]
name = "input"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
# should never include "render_gl" or "render_wgpu" here!
render_api = { path = "../render/render_api" }
math = { path = "../math" }

bevy_app = { version = "0.13", default-features = false }
bevy_ecs = { version = "0.13", default-features = false }
bevy_log = { version = "0.13", default-features = false }

gilrs = { version = "0.10.1" }